--- a/controller-server/front/static/index.html
+++ b/controller-server/front/static/index.html
@@ -22,6 +22,7 @@
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="env.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
