mqtt publish on pressing html button

--- a/controller-server/front/static/index.html
+++ b/controller-server/front/static/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="main">
-    <div class="camera" alt="Camera Image">
+    <img class="camera" alt="Camera Image" src="placeholder.png">
   </div>
   <div class="footer">
     <div class="controller-ui">
