--- a/controller-server/front/static/index.html
+++ b/controller-server/front/static/index.html
@@ -9,9 +9,14 @@
 </head>
 <body>
   <div class="main">
-    <img class="camera" alt="Camera Image" src="placeholder.png">
+	<div class="image-container">
+      <img class="camera" alt="Camera Image" src="placeholder.png">
+	  <div class="frame">
+		  <span class="fps">0</span>fps
+	  </div>
+  	</div>
   </div>
-  <div class="footer">
+    <div class="footer">
     <div class="controller-ui">
       <div class="placeholder"></div>
       <button class="btn btn-top">▲</button>
