front: add align button & key event

--- a/controller-server/front/static/index.html
+++ b/controller-server/front/static/index.html
@@ -16,15 +16,21 @@
 	  </div>
   	</div>
   </div>
-    <div class="footer">
-    <div class="controller-ui">
-      <div class="placeholder"></div>
-      <button class="btn btn-top">▲</button>
-      <div class="placeholder"></div>
-      <button class="btn btn-left">◀</button>
-      <button class="btn btn-down">▼</button>
-      <button class="btn btn-right">▶</button>
-    </div>
+  <div class="footer">
+ 	<div class="controller-container">
+  	  <div class="controller-align-ui">
+  	    <div class="placeholder"></div>
+  	    <button class="btn btn-align"></button>
+  	  </div>
+      <div class="controller-ui">
+        <div class="placeholder"></div>
+        <button class="btn btn-top">▲</button>
+        <div class="placeholder"></div>
+	    <button class="btn btn-left">◀</button>
+        <button class="btn btn-down">▼</button>
+        <button class="btn btn-right">▶</button>
+      </div>
+	</div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="index.js"></script>
